--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project name="DI-Container" basedir="." default="all">
   <property name="vendor" value="Rafał Kaleta" />
-  <property name="version" value="1.0" />
+  <property name="version" value="2.0" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
@@ -52,7 +52,7 @@
         <attribute name="Specification-Version" value="${version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
         <attribute name="Implementation-Title" value="ref_humbold.di_container" />
-        <attribute name="Implementation-Verion" value="${version}-build${build.number}" />
+        <attribute name="Implementation-Verion" value="${version}.${build.number}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
     </jar>
