--- a/build.xml
+++ b/build.xml
@@ -1,28 +1,46 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project name="DI-Container" basedir="." default="all">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="DI-Container" basedir="." default="all">
   <property name="vendor" value="Rafał Kaleta" />
   <property name="major.version" value="2" />
   <property name="minor.version" value="2" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
-  <property name="javadoc.output.dir" value="docs" />
   <property name="junit.output.dir" value="junit_results" />
   <property name="junit.report.dir" value="junit_reports" />
+  <property name="javadoc.output.dir" value="docs" />
+  <property name="ivy.lib.dir" value="lib" />
+  <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
   <property name="target" value="1.8" />
   <property name="source" value="1.8" />
 
-  <path id="JUnit4.libraryclasspath">
-    <pathelement location="/usr/share/java/hamcrest-core.jar" />
-    <pathelement location="/usr/share/java/junit4.jar" />
-  </path>
   <path id="DI-container.classpath">
-    <path refid="JUnit4.libraryclasspath" />
+    <fileset dir="${ivy.lib.dir}" includes="*.jar" />
     <pathelement location="${build.dir}" />
   </path>
 
+  <target name="download-ivy" unless="offline">
+    <mkdir dir="${ivy.lib.dir}" />
+    <get
+      src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+      dest="${ivy.lib.dir}/ivy.jar" usetimestamp="true" />
+  </target>
+
+  <target name="init-ivy" depends="download-ivy">
+    <path id="ivy.lib.path">
+      <fileset dir="${ivy.lib.dir}" includes="*.jar" />
+    </path>
+    <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant"
+             classpathref="ivy.lib.path" />
+  </target>
+
+  <target name="resolve" depends="init-ivy">
+    <ivy:retrieve />
+  </target>
+
   <target name="clean">
+    <delete dir="${ivy.lib.dir}" />
     <delete dir="${build.dir}" />
   </target>
 
@@ -34,7 +52,7 @@
     </copy>
   </target>
 
-  <target name="build" depends="init">
+  <target name="build" depends="init, resolve">
     <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
            destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
@@ -45,7 +63,6 @@
   </target>
 
   <target name="jar" depends="build">
-    <buildnumber />
     <jar destfile="di_container.jar" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
@@ -53,7 +70,7 @@
         <attribute name="Specification-Version" value="${major.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
         <attribute name="Implementation-Title" value="ref_humbold.di_container" />
-        <attribute name="Implementation-Verion" value="${major.version}.${minor.version}-b${build.number}" />
+        <attribute name="Implementation-Verion" value="${major.version}.${minor.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
     </jar>
