--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="di_container.jar" basedir="${build.dir}" excludes="**/*Test.class">
+    <jar destfile="dicontainer.jar" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Specification-Title" value="Dependency Injection Container" />
@@ -98,7 +98,7 @@
     <delete dir="${javadoc.output.dir}" />
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="ref_humbold.di_container.*" />
+      <package name="refhumbold.dicontainer.*" />
     </javadoc>
   </target>
 
