--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="DI-Container" basedir="." default="all">
   <property name="vendor" value="Rafał Kaleta" />
-  <property name="major.version" value="2" />
-  <property name="minor.version" value="2" />
+  <property name="major.version" value="3" />
+  <property name="minor.version" value="0" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
   <property name="junit.output.dir" value="junit_results" />
   <property name="junit.report.dir" value="junit_reports" />
   <property name="javadoc.output.dir" value="docs" />
+  <property name="main.package" value="refhumbold.dicontainer" />
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
@@ -24,7 +25,7 @@
     <mkdir dir="${ivy.lib.dir}" />
     <get
       src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
-      dest="${ivy.lib.dir}/ivy.jar" usetimestamp="true" />
+      dest="${ivy.lib.dir}/ivy-${ivy.install.version}.jar" usetimestamp="true" />
   </target>
 
   <target name="init-ivy" depends="download-ivy">
@@ -63,13 +64,15 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="dicontainer.jar" basedir="${build.dir}" excludes="**/*Test.class">
+    <delete file="dicontainer-*.jar" />
+    <jar destfile="dicontainer-${major.version}.${minor.version}.jar" basedir="${build.dir}"
+         excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Specification-Title" value="Dependency Injection Container" />
         <attribute name="Specification-Version" value="${major.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="ref_humbold.di_container" />
+        <attribute name="Implementation-Title" value="${main.package}" />
         <attribute name="Implementation-Verion" value="${major.version}.${minor.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
@@ -98,7 +101,7 @@
     <delete dir="${javadoc.output.dir}" />
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="refhumbold.dicontainer.*" />
+      <package name="${main.package}.*" />
     </javadoc>
   </target>
 
