--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-# Java, JUnit, Apache ANT, Apache Ivy
+# Java, Apache ANT, Apache Ivy
 bin
 docs
-junit_reports
-junit_results
 lib
 
-# IntelliJ
+# JUnit
+junit_reports
+junit_results
+
+# IntelliJ IDEA
 *.iml
 .idea
 out
