--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,9 @@
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
-  <property name="junit.output.dir" value="junit_results" />
-  <property name="junit.report.dir" value="junit_reports" />
+  <property name="dist.dir" value="dist" />
+  <property name="junit.output.dir" value="junit/results" />
+  <property name="junit.report.dir" value="junit/reports" />
   <property name="javadoc.output.dir" value="docs" />
   <property name="main.package" value="refhumbold.dicontainer" />
   <property name="ivy.lib.dir" value="lib" />
@@ -31,24 +32,27 @@
       dest="${ivy.lib.dir}/ivy-${ivy.install.version}.jar" usetimestamp="true" />
   </target>
 
-  <target name="init-ivy" depends="download-ivy">
+  <target name="resolve" depends="download-ivy">
     <path id="ivy.lib.path">
       <fileset dir="${ivy.lib.dir}" includes="*.jar" />
     </path>
     <taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant"
              classpathref="ivy.lib.path" />
-  </target>
-
-  <target name="resolve" depends="init-ivy">
     <ivy:retrieve />
   </target>
 
   <target name="clean">
     <delete dir="${ivy.lib.dir}" />
     <delete dir="${build.dir}" />
+    <delete dir="${dist.dir}" />
   </target>
 
-  <target name="init">
+  <target name="clean-test" depends="clean">
+    <delete dir="${junit.output.dir}" />
+    <delete dir="${junit.reports.dir}" />
+  </target>
+
+  <target name="init" depends="resolve">
     <mkdir dir="${build.dir}" />
     <copy todir="${build.dir}" includeemptydirs="false">
       <fileset dir="${src.dir}" excludes="**/*.java" />
@@ -56,7 +60,7 @@
     </copy>
   </target>
 
-  <target name="build" depends="init, resolve">
+  <target name="build" depends="init">
     <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
            destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
@@ -67,10 +71,7 @@
   </target>
 
   <target name="jar" depends="build">
-    <delete verbose="true">
-      <fileset dir="." includes="dicontainer-*.jar" />
-    </delete>
-    <jar destfile="dicontainer-${jar.version}.jar" basedir="${build.dir}"
+    <jar destfile="${dist.dir}/dicontainer-${jar.version}.jar" basedir="${build.dir}"
          excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
@@ -85,7 +86,6 @@
   </target>
 
   <target name="test">
-    <delete dir="${junit.output.dir}" />
     <mkdir dir="${junit.output.dir}" />
     <junit fork="yes" printsummary="withOutAndErr">
       <formatter type="xml" />
@@ -110,7 +110,7 @@
     </javadoc>
   </target>
 
-  <target name="release" depends="clean, build, jar" />
+  <target name="release" depends="clean, jar" />
 
-  <target name="all" depends="clean, build, test, jar, javadocs" />
+  <target name="all" depends="clean-test, jar, test, javadocs" />
 </project>
