--- a/build.xml
+++ b/build.xml
@@ -13,8 +13,6 @@
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
   <property name="debuglevel" value="source,lines,vars" />
-  <property name="target" value="1.8" />
-  <property name="source" value="1.8" />
 
   <tstamp>
     <format property="jar.version" pattern="yyyy.M.d" locale="en,GB" />
@@ -64,8 +62,7 @@
   </target>
 
   <target name="build" depends="init">
-    <javac source="${source}" target="${target}" debug="true" debuglevel="${debuglevel}"
-           destdir="${build.dir}" includeantruntime="false">
+    <javac debug="true" debuglevel="${debuglevel}" destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
@@ -112,7 +109,7 @@
 
   <target name="release" depends="jar" />
 
-  <target name="all" depends="jar, test, javadocs" />
+  <target name="all" depends="release, test, javadocs" />
 
   <target name="refresh" depends="clean, release" />
 
