--- a/build.xml
+++ b/build.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="DI-Container" basedir="." default="all">
+  <tstamp>
+    <format property="date.version" pattern="yyyy.M.d" locale="en,GB" />
+  </tstamp>
+
   <property name="vendor" value="Rafał Kaleta" />
-  <property name="spec.version" value="2" />
+  <property name="major.version" value="0" />
+  <property name="minor.version" value="2" />
+  <property name="spec.version" value="${major.version}.${minor.version}" />
+  <property name="jar.version" value="${major.version}.${minor.version}.{date.version}" />
+
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
   <property name="dist.dir" value="dist" />
-  <property name="junit.output.dir" value="junit/results" />
-  <property name="junit.report.dir" value="junit/reports" />
+  <property name="junit.output.dir" value="junit" />
+  <property name="junit.result.dir" value="${junit.output.dir}/results" />
+  <property name="junit.report.dir" value="${junit.output.dir}/reports" />
   <property name="javadoc.output.dir" value="docs" />
-  <property name="main.package" value="refhumbold.dicontainer" />
+  <property name="jar.file" value="$dicontainer-${jar.version}.jar" />
+
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
-  <property name="debuglevel" value="source,lines,vars" />
 
-  <tstamp>
-    <format property="jar.version" pattern="yyyy.M.d" locale="en,GB" />
-  </tstamp>
-
-  <property name="jar.file" value="${dist.dir}/dicontainer-${jar.version}.jar" />
+  <property name="main.package" value="refhumbold.dicontainer" />
+  <property name="debug.level" value="source,lines,vars" />
 
   <path id="DI-container.classpath">
     <fileset dir="${ivy.lib.dir}" includes="*.jar" />
@@ -49,7 +55,6 @@
 
   <target name="clean-all" depends="clean">
     <delete dir="${junit.output.dir}" />
-    <delete dir="${junit.report.dir}" />
     <delete dir="${javadoc.output.dir}" />
   </target>
 
@@ -62,7 +67,8 @@
   </target>
 
   <target name="build" depends="init">
-    <javac debug="true" debuglevel="${debuglevel}" destdir="${build.dir}" includeantruntime="false">
+    <javac debug="true" debuglevel="${debug.level}" destdir="${build.dir}"
+           includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
@@ -71,7 +77,7 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="${jar.file}" basedir="${build.dir}" excludes="**/*Test.class">
+    <jar destfile="{dist.dir}/${jar.file}" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Specification-Title" value="Dependency Injection Container" />
@@ -85,17 +91,17 @@
   </target>
 
   <target name="test">
-    <mkdir dir="${junit.output.dir}" />
+    <mkdir dir="${junit.result.dir}" />
     <junit fork="yes" printsummary="withOutAndErr">
       <formatter type="xml" />
-      <batchtest todir="${junit.output.dir}">
+      <batchtest todir="${junit.result.dir}">
         <fileset dir="${test.dir}" includes="**/*Test.java" />
       </batchtest>
       <classpath refid="DI-container.classpath" />
     </junit>
     <mkdir dir="${junit.report.dir}" />
     <junitreport todir="${junit.report.dir}">
-      <fileset dir="${junit.output.dir}" includes="TEST-*.xml" />
+      <fileset dir="${junit.result.dir}" includes="TEST-*.xml" />
       <report format="frames" todir="${junit.report.dir}" />
     </junitreport>
   </target>
