--- a/build.xml
+++ b/build.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="DI-Container" basedir="." default="all">
   <tstamp>
-    <format property="date.version" pattern="yyyy.M.d" locale="en,GB" />
+    <format property="date.version" pattern="yyMMdd" locale="en,GB" />
   </tstamp>
 
-  <property name="vendor" value="Rafał Kaleta" />
   <property name="major.version" value="0" />
   <property name="minor.version" value="2" />
   <property name="spec.version" value="${major.version}.${minor.version}" />
   <property name="jar.version" value="${major.version}.${minor.version}.{date.version}" />
+  <property name="vendor" value="Rafał Kaleta" />
 
+  <property name="main.package" value="dicontainer" />
+  <property name="toplevel.package" value="refhumbold.${main.package}" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
@@ -18,13 +20,13 @@
   <property name="junit.result.dir" value="${junit.output.dir}/results" />
   <property name="junit.report.dir" value="${junit.output.dir}/reports" />
   <property name="javadoc.output.dir" value="docs" />
-  <property name="jar.file" value="$dicontainer-${jar.version}.jar" />
+  <property name="jar.file" value="${main.package}-${jar.version}.jar" />
 
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.4.0" />
 
-  <property name="main.package" value="refhumbold.dicontainer" />
-  <property name="debug.level" value="source,lines,vars" />
+  <property name="source.level" value="8" />
+  <property name="target.level" value="8" />
 
   <path id="DI-container.classpath">
     <fileset dir="${ivy.lib.dir}" includes="*.jar" />
@@ -32,6 +34,7 @@
   </path>
 
   <target name="download-ivy" unless="offline">
+    <delete dir="${ivy.lib.dir}" />
     <mkdir dir="${ivy.lib.dir}" />
     <get
       src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
@@ -48,7 +51,6 @@
   </target>
 
   <target name="clean">
-    <delete dir="${ivy.lib.dir}" />
     <delete dir="${build.dir}" />
     <delete dir="${dist.dir}" />
   </target>
@@ -67,7 +69,7 @@
   </target>
 
   <target name="build" depends="init">
-    <javac debug="true" debuglevel="${debug.level}" destdir="${build.dir}"
+    <javac source="${source.level}" target="${target.level}" destdir="${build.dir}"
            includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
@@ -77,13 +79,13 @@
   </target>
 
   <target name="jar" depends="build">
-    <jar destfile="{dist.dir}/${jar.file}" basedir="${build.dir}" excludes="**/*Test.class">
+    <jar destfile="${dist.dir}/${jar.file}" basedir="${build.dir}" excludes="**/*Test.class">
       <manifest>
         <attribute name="Built-By" value="${vendor}" />
         <attribute name="Specification-Title" value="Dependency Injection Container" />
         <attribute name="Specification-Version" value="${spec.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="${main.package}" />
+        <attribute name="Implementation-Title" value="${toplevel.package}" />
         <attribute name="Implementation-Version" value="${jar.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
@@ -109,7 +111,7 @@
   <target name="javadocs">
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="${main.package}.*" />
+      <package name="${toplevel.package}.*" />
     </javadoc>
   </target>
 
