--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,6 @@
   <property name="vendor" value="Rafał Kaleta" />
 
   <property name="main.package" value="dicontainer" />
-  <property name="toplevel.package" value="refhumbold.${main.package}" />
   <property name="src.dir" value="src" />
   <property name="test.dir" value="test" />
   <property name="build.dir" value="bin" />
@@ -23,7 +22,7 @@
   <property name="jar.file" value="${main.package}-${jar.version}.jar" />
 
   <property name="ivy.lib.dir" value="lib" />
-  <property name="ivy.install.version" value="2.4.0" />
+  <property name="ivy.install.version" value="2.5.0-rc1" />
 
   <property name="source.level" value="8" />
   <property name="target.level" value="8" />
@@ -82,7 +81,7 @@
         <attribute name="Specification-Title" value="Dependency Injection Container" />
         <attribute name="Specification-Version" value="${spec.version}" />
         <attribute name="Specification-Vendor" value="${vendor}" />
-        <attribute name="Implementation-Title" value="${toplevel.package}" />
+        <attribute name="Implementation-Title" value="${main.package}" />
         <attribute name="Implementation-Version" value="${jar.version}" />
         <attribute name="Implementation-Vendor" value="${vendor}" />
       </manifest>
@@ -108,7 +107,7 @@
   <target name="docs">
     <mkdir dir="${javadoc.output.dir}" />
     <javadoc sourcepath="${src.dir}" destdir="${javadoc.output.dir}" access="public">
-      <package name="${toplevel.package}.*" />
+      <package name="${main.package}.*" />
     </javadoc>
   </target>
 
