--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,8 @@
     <format property="date.version" pattern="yyMMdd" locale="en,GB" />
   </tstamp>
 
-  <property name="major.version" value="0" />
-  <property name="minor.version" value="3" />
+  <property name="major.version" value="1" />
+  <property name="minor.version" value="0" />
   <property name="spec.version" value="${major.version}.${minor.version}" />
   <property name="jar.version" value="${major.version}.${minor.version}.${date.version}" />
   <property name="vendor" value="Rafał Kaleta" />
@@ -20,12 +20,10 @@
   <property name="junit.report.dir" value="${junit.output.dir}/report" />
   <property name="javadoc.output.dir" value="docs" />
   <property name="jar.file" value="${main.package}-${jar.version}.jar" />
+  <property name="source.level" value="11" />
 
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.5.0" />
-
-  <property name="source.level" value="8" />
-  <property name="target.level" value="8" />
 
   <path id="DI-container.classpath">
     <fileset dir="${ivy.lib.dir}" includes="*.jar" />
@@ -65,8 +63,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac destdir="${build.dir}" source="${source.level}" target="${target.level}"
-           includeantruntime="false">
+    <javac destdir="${build.dir}" source="${source.level}" includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
