--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,6 @@
   <property name="junit.report.dir" value="${junit.output.dir}/report" />
   <property name="javadoc.output.dir" value="docs" />
   <property name="jar.file" value="${main.package}-${jar.version}.jar" />
-  <property name="source.level" value="11" />
 
   <property name="ivy.lib.dir" value="lib" />
   <property name="ivy.install.version" value="2.5.0" />
@@ -63,7 +62,7 @@
   </target>
 
   <target name="compile" depends="init">
-    <javac destdir="${build.dir}" source="${source.level}" includeantruntime="false">
+    <javac destdir="${build.dir}" includeantruntime="false">
       <src path="${src.dir}" />
       <src path="${test.dir}" />
       <compilerarg line="-Xlint" />
