--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ addons:
 language: java
 jdk: openjdk11
 
-before_install: ./travis/install_ant_junit5.sh
+before_install: ./ci/install_ant_junit5.sh
 install: ant rebuild
 script: ant -lib ./lib test
