--- a/build.xml
+++ b/build.xml
@@ -86,7 +86,7 @@
 
   <target name="test">
     <mkdir dir="${junit.result.dir}" />
-    <junitlauncher printsummary="true">
+    <junitlauncher printsummary="true" failureproperty="junit.failure">
       <classpath refid="project.classpath" />
       <testclasses outputdir="${junit.result.dir}">
         <fileset dir="${build.dir}" includes="**/*Test.class" />
@@ -98,6 +98,7 @@
       <fileset dir="${junit.result.dir}" includes="TEST-*.xml" />
       <report format="frames" todir="${junit.report.dir}" />
     </junitreport>
+    <fail if="junit.failure" message="JUnit test(s) failed" />
   </target>
 
   <target name="docs">
