Update ANT build file

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build-and-test:
@@ -18,12 +18,12 @@ jobs:
       - name: Download Dependencies
         run: |
           export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          ant -lib ./lib resolve
+          ant resolve
       - name: Build
         run: |
           export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          ant -lib ./lib build
+          ant jar
       - name: Test
         run: |
           export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-          ant -lib ./lib test
+          ant test
